<resources>
    <string name="app_name">PhLogBusiness</string>
    <string name="general_photo_chooser_title">Upload picture</string>
    <string name="client_email_feedback_subject">client_feed_back</string>
    <string name="map_fragment_open_gps">Please open Gps</string>
    <string name="general_photo_chooser_camera">Camera</string>
    <string name="general_gallery_chooser_title">Select Picture:</string>
    <string name="map_fragment_yes">Enable Gps</string>
    <string name="map_fragment_no">No Gps</string>
    <string name="general_photo_chooser_gallery">Gallery</string>
    <string name="map_fragment_unspecified_user_location">UnSpecified userLocation</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="full_name">Name</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="mail">Email</string>
    <string name="country">Country</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_terms_notifier">By creating An account you are agree to our user Agreement and privacy
        Policy
    </string>
    <string name="comment_cant_not_be_null">Comment can\'t be null</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="do_not_have_account">Don\'t Have an account?" "</string>
    <string name="or">OR</string>
    <string name="sign_in_facebook">Continue with Facebook</string>
    <string name="login_google">Continue with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_feed_back">Send Feed Back</string>
    <string name="skip">Skip</string>
    <string name="invailde_name">Invalid name</string>
    <string name="invalid_last_name">Invalid user name</string>
    <string name="invalid_mail">Invalid email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_limit">Password can not be less than 6 Char</string>
    <string name="invalid_phone_number">invalid Phone Number</string>
    <string name="password_not_matched">password not matched</string>
    <string name="please_select_country">Please Select you country</string>
    <string name="select_country_not_exist">your country not exist</string>
    <string name="camera_and_location_rationale">Need camera and storage permation</string>
    <string name="email_missing">Email is missing</string>
    <string name="saved">saved</string>
    <string name="following">Following</string>
    <string name="campaigns">Campaigns</string>
    <string name="error_login">Error login</string>
    <string name="upload_your_profile_image">Upload profile picture</string>
    <string name="upload_your_cover_image">Upload cover picture</string>
    <string name="upload">Upload</string>
    <string name="loading">Loading</string>
    <string name="account_details">Account details</string>
    <string name="last_name">Last Name</string>
    <string name="industry">Industry</string>
    <string name="select_img">Select Image</string>
    <string name="me">Profile</string>
    <string name="Notification">Notification</string>
    <string name="home">Stories</string>
    <string name="stories">Stories</string>
    <string name="filters">Filters</string>
    <string name="remind_me">REMIND ME</string>
    <string name="join">JOIN</string>
    <string name="tab_mission">Settings</string>
    <string name="tab_photos">Photos</string>
    <string name="days_left">Days Left</string>
    <string name="hosted_by">Hosted By %1$s</string>
    <string name="follow">Follow</string>
    <string name="submit_ur_photo">Submit your photo</string>
    <string name="please_wait_facebooklogin">Please Wait</string>
    <string name="login_canceled_facebooklogin">FaceBook Login Canceled</string>
    <string name="login_failed_facebooklogin">FaceBook Login Failed</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="following_state">You are now following</string>
    <string name="error_following_state">Error Following User</string>
    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="total_photos">Photos</string>
    <string name="followers">Followers</string>
    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">Edit</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
    <string name="choose_from_your_photos">Tab On Camera button Or Choose from your Photos</string>
    <string name="back">back</string>
    <string name="next">Next</string>
    <string name="add_caption">Add caption</string>
    <string name="add_location">Add Location</string>
    <string name="save_to_draft">Save to draft</string>
    <string name="rationale_sms">Needs Locaiton to get you address</string>
    <string name="need_location_permation">Need location Permation</string>
    <string name="tags">Tags</string>
    <string name="powered_by">Powered By</string>
    <string name="add_new_tag">Add new Tag</string>
    <string name="selected_tags">Selected Tags</string>
    <string name="upload_photo">Upload photo</string>
    <string name="brand">Brand</string>
    <string name="profile">Profile</string>
    <string name="album">Album</string>
    <string name="send">Send</string>
    <string name="your_comment">Write your comment…</string>
    <string name="brand_campaign">Brand Campaigns</string>
    <string name="about_brand">About</string>
    <string name="campaign_followed">Campaign Followed</string>
    <string name="brand_followed">Brand followed</string>
    <string name="total_sizes">Total Sizes :</string>
    <string name="sale_info">Sale Info</string>
    <string name="user_id_sale">user id of sale to get more info</string>
    <string name="by">By</string>
    <string name="buyer">Buyer</string>
    <string name="price">price</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="select_industry_not_exist">Industry not exist</string>
    <string name="ok">ok</string>
    <string name="verify_account">Please check your mail to verify your account</string>
    <string name="campaign_running_tab">Running</string>
    <string name="campaign_complete_tab">Completed</string>
    <string name="campaign_draft_tab">Draft</string>
    <string name="people_joined">People joined</string>
    <string name="change_cover">Change cover</string>
    <string name="live">Live</string>
    <string name="stats">Stats</string>
    <string name="status">Status</string>
    <string name="prize">Prize</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End date</string>
    <string name="choose_cover_image">Choose Cover Image</string>
    <string name="campaign_name">Campaign Name</string>
    <string name="add_campaign">Add Campaign</string>
    <string name="campaign_name_required">Campaign name is required</string>
    <string name="campaign_description">Campaign description</string>
    <string name="campaign_prize">Campaign prize</string>
    <string name="campaign_end_date">Campaign end date</string>
    <string name="campaign_start_date">Campaign start date</string>
    <string name="invalid_price_value">Invalid price value</string>
    <string name="invalid_description_value">Invalid description value</string>
    <string name="invalid_start_date_value">Invalid start date value</string>
    <string name="invalid_prize_value">Invalid prize value</string>
    <string name="please_select_end_date">Please select end date</string>
    <string name="please_select_start_date">Please select start date</string>
    <string name="submit">Submit</string>
    <string name="save_as_draft">Save as draft</string>
    <string name="campaign_image_cover_required">Campaign image cover Required</string>
    <string name="please_add_more_industry">Please add at least one Industry</string>
    <string name="set_up_ur_account">Setup your brand</string>
    <string name="cart">Cart</string>
    <string name="my_light_box">My Studio</string>
    <string name="photos">photos</string>
    <string name="light_box">Studio</string>
    <string name="enter_name">Enter name</string>
    <string name="add">Add</string>
    <string name="new_light_box">New Studio</string>
    <string name="delete">Delete</string>
    <string name="light_box_deleted">Light box deleted</string>
    <string name="result">Result</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="call_support">Call support</string>
    <string name="choose_light_box">Choose Studio</string>
    <string name="save">Save</string>
    <string name="add_to_light_box">Add to Studio</string>
    <string name="add_new_light_box">Add new Studio</string>
    <string name="images">Image</string>
    <string name="like">Like</string>
    <string name="comment">Commnet</string>
    <string name="number_of_winners">Number of winners</string>
    <string name="winners_number_required">winners number required</string>
    <string name="apply">Apply</string>
    <string name="setup_your_brand">Setup Your Brand</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_cover_and_thumbnail">Choose cover and thumbnail images.</string>
    <string name="name_in_arabic" translatable="false">الاسم</string>
    <string name="name_in_english" translatable="false">Name</string>
    <string name="error_missing_cover">Choose a cover photo</string>
    <string name="error_missing_thumbnail">Choose a thumbnail photo</string>
    <string name="error_missing_arabic_name">Provide an Arabic name</string>
    <string name="error_missing_english_name">Provide an English name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address">Address</string>
    <string name="hint_website">Website</string>
    <string name="error_missing_industry">Select an industry</string>
    <string name="error_missing_phone">provide a phone number</string>
    <string name="error_missing_address">Provide an address</string>
    <string name="error_missing_email">Provide an email</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_missing_website">Provide a website</string>
    <string name="error_invalid_website">Invalid website url</string>
    <string name="required_document">Required Documents.</string>
    <string name="error_missing_commercial_record">Provide commercial record</string>
    <string name="error_missing_taxes_record">Provide taxes record</string>
    <string name="taxes_record">Taxes Record</string>
    <string name="commercial_record">Commercial Record</string>
    <string name="hint_brand_desc">Descripe your brand</string>
    <string name="phlog_uploading">Uploading...</string>
    <string name="uplaod_done">Upload done</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="check_out_now">Check out now</string>
    <string name="cart_is_empty">Your cart is empty</string>
    <string name="buy_exclusive">Buy Exclusive</string>
    <string name="cart_item_count">%1$d photos in cart</string>
    <string name="price_value">%1$.1f $</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_cart_item_confirmation">Are you sure?</string>
</resources>