<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:minWidth="300dp"
		android:minHeight="@dimen/dp150"
		app:cardCornerRadius="@dimen/dialog_card_corner_radius"
		app:cardElevation="@dimen/dialog_card_elevation">
	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:orientation="vertical"
	              android:padding="@dimen/dp16"
	              
	>
		<com.example.ddopik.phlogbusiness.base.widgets.CustomTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="@dimen/font_large"
				android:textStyle="bold"
				android:text="@string/new_light_box"/>
		
		
		<EditText android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:minWidth="250dp"
		          android:padding="@dimen/widgets_padding"
		          android:layout_marginTop="@dimen/dp16"
		          android:layout_marginBottom="@dimen/dp16"
		          android:layout_marginStart="@dimen/widgets_padding"
		          android:layout_marginEnd="@dimen/widgets_padding"
		          android:background="@drawable/dialog_rounded_background"
		          android:hint="@string/enter_name"/>
		<LinearLayout android:layout_width="match_parent"
		              android:layout_height="wrap_content"
		              android:orientation="horizontal">
			<Button android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/add"
			        android:textColor="@color/white"
			        android:layout_weight="1"
			        android:background="@color/text_input_color"/>
			
			<Button android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="@color/white"
			        android:layout_weight="1"
			        android:textColor="@color/text_input_color"
			        android:text="@string/cancel"/>
		
		</LinearLayout>
	
	
	</LinearLayout>

</android.support.v7.widget.CardView>