<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setupbrand.fragment.stoptwo.StepTwoFragment"
    tools:background="@color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".75">


        <EditText
            android:id="@+id/industry_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/industry"
            android:inputType="textPersonName"
            app:autoSizeTextType="uniform"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/hint_phone"
            android:textColor="@color/black"
            android:inputType="phone"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/industry_edit_text" />

        <EditText
            android:id="@+id/address_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/hint_address"
            android:textColor="@color/black"
            android:inputType="textPostalAddress"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_edit_text" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_edit_text" />

        <EditText
            android:id="@+id/website_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/hint_website"
            android:inputType="textWebEditText"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

        <EditText
                android:id="@+id/desc_edit_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="start|top"
                android:hint="@string/hint_brand_desc"
                android:inputType="textMultiLine"
                android:ellipsize="end"
                android:textSize="@dimen/sign_up_text_size_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/website_edit_text"
                app:layout_constraintVertical_bias="0.05"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>