<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:src="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/upload_background"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/upload_your_profile_image"
        android:textStyle="bold"
        android:gravity="bottom"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium" />



    <FrameLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/select_image_background">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_gravity="center">
            <ImageView
                    android:id="@+id/pick_image"
                    android:layout_width="@dimen/dp80"
                    android:layout_height="@dimen/dp65"
                    app:srcCompat="@drawable/ic_upload"
                    android:layout_gravity="center"
            />

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/select_img"
                      android:textSize="@dimen/text_medium"
                      android:fontFamily="@font/arial_rounded_font"
                      android:textColor="@color/white"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top|center"
        android:orientation="vertical">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp12"
            android:background="@drawable/rounded_upload_image_btn"
            android:text="@string/upload"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_skip_btn"
            android:text="@string/skip"
            android:textColor="@color/white"/>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/filters_list_rv"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:padding="4dp"
        android:scrollbars="none" />

</LinearLayout>