<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"

		android:minHeight="@dimen/dp150"
		android:layout_gravity="top|center"
		app:cardCornerRadius="@dimen/dialog_card_corner_radius"
		app:cardElevation="@dimen/dialog_card_elevation">
	
	
	<LinearLayout android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:minWidth="@dimen/custom_dialog_width"
				  android:minHeight="400dp"
				  android:orientation="vertical"
				  android:padding="@dimen/dp16"
	>
		<com.example.ddopik.phlogbusiness.base.widgets.CustomTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/choose_light_box"
				android:layout_marginBottom="@dimen/dp18"
				android:textStyle="bold"/>
		
		
		<com.example.ddopik.phlogbusiness.base.widgets.CustomRecyclerView
				android:id="@+id/add_to_light_box_rv"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:orientation="vertical"
		/>
		
		
		<LinearLayout android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:orientation="vertical"
		>
			<Button android:id="@+id/add_light_to_box_dialog_btn"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/add"
					android:textColor="@color/white"
					android:layout_weight="1"
					android:background="@color/text_input_color"/>
			
			<Button
					android:id="@+id/cancel_add_to_light_box_dialog_btn"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/white"
					android:layout_weight="1"
					android:textColor="@color/text_input_color"
					android:text="@string/cancel"/>
		
		</LinearLayout>
	
	
	</LinearLayout>
	
	<ProgressBar
			android:id="@+id/add_img_to_light_box_progress"
			android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center"/>

</android.support.v7.widget.CardView>