<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="@dimen/profile_pic_margin_horizontal"
    android:paddingRight="@dimen/profile_pic_margin_horizontal"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/profile_pic_padding_10"
        android:paddingTop="@dimen/profile_pic_padding_10">


        <TextView
            android:layout_width="@dimen/profile_pic_lbl_edit_image_control"
            android:layout_height="wrap_content"
            android:text="@string/lbl_brightness" />

        <SeekBar
            android:id="@+id/seekbar_brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/profile_pic_padding_10"
        android:paddingTop="@dimen/profile_pic_padding_10">


        <TextView
            android:layout_width="@dimen/profile_pic_lbl_edit_image_control"
            android:layout_height="wrap_content"
            android:text="@string/lbl_contrast" />

        <SeekBar
            android:id="@+id/seekbar_contrast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/profile_pic_padding_10"
        android:paddingTop="@dimen/profile_pic_padding_10">

        <TextView
            android:layout_width="@dimen/profile_pic_lbl_edit_image_control"
            android:layout_height="wrap_content"
            android:text="@string/lbl_saturation" />

        <SeekBar
            android:id="@+id/seekbar_saturation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>