<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/user_profile_background_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
        >


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <ImageView
                        android:id="@+id/user_profile_img"
                        android:layout_width="@dimen/header_img_size"
                        android:layout_height="@dimen/header_img_size"
                        android:layout_centerInParent="true"
                        android:src="@drawable/phlog_logo" />

            </RelativeLayout>


            <TextView
                    android:id="@+id/user_profile_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp18"
                    android:layout_marginBottom="@dimen/dp10"
                    android:fontFamily="@font/arial_rounded_font"
                    android:text="@string/full_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal" />

            <TextView
                    android:id="@+id/user_profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp10"
                    android:padding="@dimen/dp4"
                    android:text="@string/user_name"
                    android:textColor="@color/user_profile_text_header_color" />


        </LinearLayout>

        <Button
                android:id="@+id/follow_user"
                android:layout_width="@dimen/user_profile_follow_btn_w"
                android:layout_height="@dimen/user_profile_follow_btn_h"
                android:text="@string/follow"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/rounded_orange_btn"/>

    </LinearLayout>
</FrameLayout>